--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[5 rows x 132 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,20 +361,6 @@
    "source": [
     "train['L1YR_GROSS_PRE_AMT'].fillna(1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -509,13 +495,6 @@
    "source": [
     "train = fill_float_na(train,'POLICY_VALUE_AMT',0.15)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -886,14 +865,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "['ACCIDENT_HOSPITAL_REC_AMT', 'ANNUAL_INCOME_AMT', 'ANNUAL_PREMIUM_AMT', 'ANNUITY_AMT', 'APC_1ST_YEARDIF', 'BANK_NUMBER_CNT', \n",
+    "'BMI', 'DIEACCIDENT_AMT', 'DIEBENEFIT_AMT', 'DISEASES_HOSPITAL_REC_AMT', 'EDUCATION_CD', 'EXPIRATION_AMT', 'FIRST_CANCER_AMT', \n",
+    "'ILL_ACCELERATION_AMT']\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tranform_list = ['ILL_ADDITIONAL_AMT','INPATIENT_SURGERY_AMT','INSD_LAST_YEARDIF_CNT','L1YR_C_CNT','L1YR_GROSS_PRE_AMT',\n",
+    "                'LIFE_INSD_CNT','LONG_TERM_CARE_AMT','MONTHLY_CARE_AMT','OCCUPATION_CLASS_CD','OUTPATIENT_SURGERY_AMT',\n",
+    "                'POLICY_VALUE_AMT','TERMINATION_RATE','LEVEL','MARRIAGE_CD','PAY_LIMIT_MED_MISC_AMT','RFM_M_LEVEL']"
+   ]
   }
  ],
  "metadata": {
